Improved scrollbar and fixed bug

--- a/CarwashGUI/assets/style/mainstyle.css
+++ b/CarwashGUI/assets/style/mainstyle.css
@@ -55,7 +55,6 @@ header {
     padding: 10px;
     min-width: 150px;
     min-height: 100px;
-    max-height: 10vh;
     border-radius: 7px;
     background-color: #872341;
     box-shadow: 5px 3px 5px black;
